Minor UI tweaks

--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -40,7 +40,7 @@
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
             <small class="text-muted ml-2">
-                <a href="#">Forgot Password?</a>
+                <p>Place your password somewhere safe and do not forget it.</p>
             </small>
         </form>
     </div>
