--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -29,6 +29,7 @@
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
               <a class="nav-item nav-link" href="{{ url_for('database') }}">Database</a>
+              <a class="nav-item nav-link" href="{{ url_for('blog') }}">Blog</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
