--- a/flaskblog/templates/portfolio.html
+++ b/flaskblog/templates/portfolio.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- These imports might be redundant with the ones in layout.html -->
+<!-- Also needs to extend layout.html-->
 <title>Portfolio</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
