--- a/flaskblog/templates/database.html
+++ b/flaskblog/templates/database.html
@@ -8,7 +8,6 @@
       <th scope="col">Portfolio Name</th>
       <th scope="col">ID</th>
       <th scope="col">Edit</th>
-      <th scope="col">Delete</th>
     </tr>
     </thead>
     <tbody>
@@ -17,10 +16,11 @@
               <th scope="row">{{loop.index}}</th>
               <td>{{ item['name']}}</td>
               <td>{{ item['id'] }}</td>
-              <td><a href="{{ url_for('edit_portfolio', portfolio_id=item['id']) }}">Edit<br></a></td>
-              <td><a href="{{ url_for('edit_portfolio', portfolio_id=item['id']) }}">Delete<br></a></td>
+              <td><a href="{{ url_for('edit_portfolio', portfolio_id=item['id']) }}">Details<br></a></td>
             </tr>
         {% endfor %}
     </tbody>
     </table>
+    <a href="{{ url_for('new_portfolio') }}">Click here to add a new Portfolio<br></a>
+    <p>Click on the details link on the table to edit the portfolio. </p>
 {% endblock content %}
