--- a/flaskblog/templates/edit_portfolio.html
+++ b/flaskblog/templates/edit_portfolio.html
@@ -6,7 +6,10 @@
 			<div class="table-title">
 				<div class="row">
 					<div class="col-sm-6">
-						<h2>Manage Portfolio</h2>
+						<h2>{{portfolio.name}}</h2>
+					</div>
+					<div class="col-sm-6">
+						<a href="#deleteEntirePortfolioModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Delete Entire Portfolio</span></a>
 					</div>
 					<div class="col-sm-6">
 						<a href="#addStockModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Stock</span></a>
@@ -104,12 +107,30 @@
 				</div>
 				<div class="modal-footer">
 					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-					<!-- Edit the below line so that it calls the "delete post" function in the routes.-->
+					<!-- Edit the below line so that it calls the "delete stock from portfolio" function in the routes.-->
 					<input type="submit" class="btn btn-danger" value="Delete">
 				</div>
 			</form>
 		</div>
 	</div>
 </div>
-</html>
+<!-- Modal -->
+<div class="modal fade" id="deleteEntirePortfolioModal" tabindex="-1" role="dialog" aria-labelledby="deleteEntirePortfolioModal" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+	<div class="modal-content">
+	  <div class="modal-header">
+		<h5 class="modal-title" id="deleteEntirePortfolioModal">Are you sure you want to delete the entire portfolio?</h5>
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		  <span aria-hidden="true">&times;</span>
+		</button>
+	  </div>
+	  <div class="modal-footer">
+		<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		<form action="{{ url_for('delete_portfolio', portfolio_id=portfolio.id) }}" method="POST">
+		  <input class="btn btn-danger" type="submit" value="Delete">
+		</form>
+	  </div>
+	</div>
+  </div>
+</div>
 {% endblock content %}
