--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -27,8 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
-              <a class="nav-item nav-link" href="{{ url_for('database') }}">Database</a>
-              <a class="nav-item nav-link" href="{{ url_for('blog') }}">Blog</a>
+              <a class="nav-item nav-link" href="{{ url_for('portfolio') }}">View Exisiting Portfolios</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
