--- a/flaskblog/templates/edit_portfolio.html
+++ b/flaskblog/templates/edit_portfolio.html
@@ -5,13 +5,13 @@
 		<div class="table-wrapper">
 			<div class="table-title">
 				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-sm-8">
 						<h2>{{portfolio.name}}</h2>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-2-flex">
 						<a href="#deleteEntirePortfolioModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Delete Entire Portfolio</span></a>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-2-flex">
 						<a href="{{ url_for('addStockToPortfolio', portfolio_id=portfolio.id) }}" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Stock</span></a>
 					</div>
 				</div>
