Users can only see their own portfolios.

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>About Page</h1>
+    <p>This website was created for a class at UIUC. It demonstrates the ability to add, edit, or delete records from databases.</p>
 {% endblock content %}
