--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -2,8 +2,7 @@
 {% block content %}
     <h1>Welcome to the RobotAdvisor. Here are some links to get started.</h1>
     {% if current_user.is_authenticated %}
-      <a href="{{ url_for('account') }}">Account<br></a>
-      <a href="{{ url_for('portfolio') }}">View Existing Portfolios<br></a>
+      <a href="{{ url_for('portfolio') }}">View Portfolios<br></a>
       <a href="{{ url_for('new_portfolio') }}">New Portfolio<br></a>
       <a href="{{ url_for('blog') }}">Blog<br></a>
       <a href="{{ url_for('logout') }}">Logout<br></a>
