--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,5 +1,24 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
-    <p>This website was created for a class at UIUC. It demonstrates the ability to add, edit, or delete records from databases.</p>
+<h1>About</h1>
+<p>This website is a course project for CS411@UIUC to demonstrate the ability to add, edit, or delete records from databases.</p>
+
+<h1>Features</h1>
+<ul>
+    <li>
+        Create and manage portfolios
+    </li>
+    <li>
+        Manage stocks in portfolios
+    </li>
+    <li>
+        Post on our forum
+    </li>
+    <li>
+        Screen stocks (TBD)
+    </li>
+    <li>
+        Get machine-learning-based stock recommendations (TBD)
+    </li>
+</ul>
 {% endblock content %}
