--- a/flaskblog/templates/stock_details.html
+++ b/flaskblog/templates/stock_details.html
@@ -103,7 +103,7 @@
 			</table>
 			<div style="text-align:center">
 				<a href="{{ url_for('edit_portfolio', portfolio_id=portfolio_id) }}" class="btn btn-info">Return to Portfolio<br></a>
-			</div
+			</div>
 		</div>
 	</div>
 </div>
