--- a/flaskblog/templates/addStock.html
+++ b/flaskblog/templates/addStock.html
@@ -21,9 +21,35 @@
         </fieldset>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
+            <a href="{{ url_for('edit_portfolio', portfolio_id=portfolio.id) }}" class="btn btn-outline-secondary">Cancel<br></a>
         </div>
         <p>Some examples of stocks are AAPL, BA, DIS, MSFT, TSLA, XOM</p>
         <p>Do not try to add ETFs or mutual funds</p>
     </form>
 </div>
+<div class="content-section">
+    <h2>Machine Learning Recomendations</h2>
+    <table id="sortableTable" class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th onclick="sortTable(0)">#</th>
+                <th onclick="sortTable(1)">Symbol</th>
+                <th onclick="sortTable(2)">Revenue Per Share</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for stock in recommendations %}
+            <tr>
+                <td>{{loop.index}}</td>
+                <td><a href="{{ url_for('stockDetails', stock_name=stock['symbol'], portfolio_id=portfolio.id) }}">{{stock.symbol}}<br></a></td>
+                <td>{{stock.revenue_per_share}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <div style="text-align:center">
+        <a href="{{ url_for('edit_portfolio', portfolio_id=portfolio.id) }}" class="btn btn-info">Return to Portfolio<br></a>
+    </div>
+</div>
+
 {% endblock content %}
