--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -29,6 +29,7 @@
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
               <a class="nav-item nav-link" href="{{ url_for('portfolio') }}">Portfolios</a>
               <a class="nav-item nav-link" href="{{ url_for('blog') }}">Forum</a>
+              <a class="nav-item nav-link" href="{{ url_for('screener') }}">Screener</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
