Update screener page

--- a/flaskblog/templates/sqlSearch.html
+++ b/flaskblog/templates/sqlSearch.html
@@ -96,8 +96,8 @@
                 <th onclick="sortTable(0)">#</th>
                 <th onclick="sortTable(1)">Symbol</th>
                 <th onclick="sortTable(2)">Market Cap</th>
-                <th onclick="sortTable(3)">Price Minus SMA</th>
-                <th onclick="sortTable(4)">Price to Sales</th>
+                <th onclick="sortTable(3)">Price / SMA</th>
+                <th onclick="sortTable(4)">Price / Sales</th>
                 <th onclick="sortTable(5)">Gross Margin</th>
                 <th onclick="sortTable(6)">Profit Margin</th>
                 <th onclick="sortTable(7)">Operating Margin</th>
