--- a/flaskblog/templates/sqlSearch.html
+++ b/flaskblog/templates/sqlSearch.html
@@ -90,7 +90,7 @@
 </div>
 <div class="content-section">
     <h2>Search Results</h2>
-    <table id="sortableTable" class="table table-striped table-hover">
+    <table id="unsortableTable" class="table table-striped table-hover">
         <thead>
             <tr>
                 <th onclick="sortTable(0)">#</th>
@@ -113,7 +113,7 @@
                     <td>{{stock.ps}}</td>
                     <td>{{stock.gross_margin}}</td>
                     <td>{{stock.profit_margin}}</td>
-                    <td>{{stock.operating_margin}}</td>                    
+                    <td>{{stock.operating_margin}}</td>
                 </tr>
             {% endfor %}
         </tbody>
