--- a/flaskblog/templates/portfolio.html
+++ b/flaskblog/templates/portfolio.html
@@ -10,6 +10,7 @@
       <th scope="col" onclick="sortTable(0)">#</th>
       <th scope="col" onclick="sortTable(1)"">Portfolio Name</th>
       <th scope="col">Details</th>
+      <th scope="col">Delete</th>
     </tr>
     </thead>
     <tbody>
@@ -18,6 +19,11 @@
               <th scope="row">{{loop.index}}</th>
               <td><a href="{{ url_for('edit_portfolio', portfolio_id=item['id']) }}">{{ item['name']}}<br></a></td>
               <td><a href="{{ url_for('edit_portfolio', portfolio_id=item['id']) }}">View<br></a></td>
+              <td>
+                  <form action="{{ url_for('delete_portfolio', portfolio_id=item['id']) }}" method="POST">
+          		     <input class="btn btn-danger" type="submit" value="Delete">
+          		  </form>
+              </td>
             </tr>
         {% endfor %}
     </tbody>
