--- a/robotadvisor/templates/portfolio.html
+++ b/robotadvisor/templates/portfolio.html
@@ -22,8 +22,8 @@
         {% endfor %}
     </tbody>
     </table>
+    <p>Click on a portfolio's name or the details link on the table to edit the portfolio. </p>
     <div style="text-align:center">
         <a href="{{ url_for('new_portfolio') }}" class="btn btn-success">Add New Portfolio<br></a>
-    </div
-    <p>Click on a portfolio's name or the details link on the table to edit the portfolio. </p>
+    </div>
 {% endblock content %}
