Update About page

--- a/robotadvisor/templates/about.html
+++ b/robotadvisor/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1>About</h1>
-<p>This website is a course project for CS411@UIUC to demonstrate the ability to add, edit, or delete records from databases.</p>
+<p>This website is a course project for CS411@UIUC.</p>
 
 <h1>Features</h1>
 <ul>
@@ -12,13 +12,13 @@
         Manage stocks in portfolios
     </li>
     <li>
+        Get machine-learning-based stock recommendations
+    </li>
+    <li>
+        Screen stocks
+    </li>
+    <li>
         Post on our forum
-    </li>
-    <li>
-        Screen stocks (TBD)
-    </li>
-    <li>
-        Get machine-learning-based stock recommendations (TBD)
     </li>
 </ul>
 {% endblock content %}
